15Jan06=======================================================================
1. Fix some obviously long standing problems with create_sysop.pl and also
with initialising the User file.
2. Fixed the problem with certain things not being shown in sh/log (because of
a regex that rejected too many things).
3. Speeded up sh/log quite a bit at the same time.
14Jan06=======================================================================
1. undo frequency rounding change, it causes more problems than it solves.
11Jan06=======================================================================
1. Fixed problem with badspotters doing ann/full as pointed out by Luigi 
IK5ZUK.
07Jan06=======================================================================
1. Fixed problem with the standalone 'showdx' program pointed out by Leo,
IZ5FSA.
2. Fixed rounding problem on entering spots as pointed out by Ron N5IN.
3. Fixed problem with badspotters sending DX as pointed out by Luigi IK5ZUK.
4. Added some extra logging for swearing so that we can see what lines used
which swear words. Hopefully this will allow sysops to refine their swearing 
filters more easily. 
06Jan06=======================================================================
1. Fix problem with rcmd <call> sh/fdx
27Dec05=======================================================================
1. put some more flesh on the SQL stuff (which may turn out to be a bit of a
red herring as it doesn't appear to be significantly faster (for spots) than
the existing code).
21Dec05=======================================================================
1. Add start of optional SQL working.
2. Fix BadWords so that the simple word check splits words on word boundaries.
13Dec05=======================================================================
1. upissue version no to 1.52
07Nov05=======================================================================
1. Fix warnings on filtering spots where the filter was looking at US states